minikube/charts/keycloak/oauth2-proxy.yaml
#https://homelab.blog/blog/devops/Istio-OIDC-Config/
#https://github.com/CloudNativeEntrepreneur/jx3-gitops-template/blob/master/helmfiles/auth/charts/oauth2proxy/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: oauth2-proxy
  template:
    metadata:
      labels:
        k8s-app: oauth2-proxy
    spec:
      containers:
        - args:
            - --provider=oidc
            - --provider-display-name="Keycloak"
            - --email-domain=*
            - --client-id=$(KEYCLOAK_CLIENT_ID)
            - --client-secret=$(KEYCLOAK_CLIENT_SECRET)
            - --pass-access-token=true
            - --pass-authorization-header=true
            - --set-authorization-header=true
            - --oidc-issuer-url=http://keycloak/auth/realms/master
            - --login-url=http://keycloak.local:30979/auth/realms/master/protocol/openid-connect/auth
            - --redeem-url=http://keycloak/auth/realms/master/protocol/openid-connect/token
            - --validate-url=http://keycloak/auth/realms/master/protocol/openid-connect/userinfo
            - --http-address=0.0.0.0:4180
            - --cookie-expire=4h0m0s
            - --whitelist-domain=".test.local"
            - --cookie-domain=.test.local
            - --cookie-secret=$(COOKIE_SECRET)
            - --standard-logging=true
            - --auth-logging=true
            - --request-logging=true
            - --skip-provider-button=true
            - --upstream=static://
            - --redis-connection-url=redis://redis-master.default.svc.cluster.local:6379
            - --session-store-type=redis
          image: quay.io/oauth2-proxy/oauth2-proxy:v7.1.3
          imagePullPolicy: IfNotPresent
          name: oauth2-proxy
          ports:
            - containerPort: 4180
              protocol: TCP
          resources: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauthproxy-service
  namespace: default
spec:
  ports:
    - name: http
      port: 4180
      protocol: TCP
      targetPort: 4180
  selector:
    k8s-app: oauth2-proxy
# ---
# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#   name: oauth-ingress
# spec:
#   hosts: 
#   - 'oauth.local'
#   gateways:
#   - kafka-gateway
#   http:
#   - route:
#     - destination:
#         host: oauthproxy-service
#         port:
#           number: 4180
