minikube/charts/keycloak/keycloak-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: keycloak-ingress
spec:
  hosts: 
  - 'keycloak.test.local'
  gateways:
  - kafka-gateway
  http:
  - route:
    - destination:
        host: keycloak
        port:
          number: 80
